cli/tests/snapshot/snapshots/snapshot__export_stdout_has_override.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
Customize a Nickel configuration through the command line before exporting

Usage: customize-mode [OPTIONS] --input <Number>

Options:
      --input <Number>
          

      --override <field> <value>
          Override any field of the configuration with a valid Nickel expression provided as a
          string. The new value will be merged with the configuration with a `force` priority.
          
          Overridable fields:
          - output

  -h, --help
          Print help (see a summary with '-h')

[CONFLICT] This configuration has a field named `override` which conflicts with the built-in
`--override` argument. To set this field to e.g. "some_value", use `--override override
"some_value"` instead of `--override "some_value"`

[WARNING] Customize mode is experimental. Its interface is subject to breaking changes.

