cli/tests/snapshot/snapshots/snapshot__export_stdout_list.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
Input fields:
- input.defaulted.subfield
- input.foo.bar: <String>
- input.foo.baz: <Array Number>

Overridable fields (require `--override`):
- override.first
- override.second.subsecond.other
- override.second.subsecond.subsubsecond

