cli/tests/snapshot/snapshots/snapshot__export_stdout_mixed_formats.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
{
  "bar": 123,
  "extra": {
    "json": true,
    "nickel": true,
    "subfield": "here",
    "toml": true
  },
  "foo": "hello"
}
