cli/tests/snapshot/snapshots/snapshot__export_stdout_sigil_env.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
{
  "env": {
    "pkg": "nickel-lang-cli"
  }
}
