cli/tests/snapshot/snapshots/snapshot__export_stdout_yaml_documents.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
---
a_record:
  even:
    more:
      nested: record
---
1
---
another_record: hi
