cli/tests/snapshot/snapshots/snapshot__package_stderr_invalid-git-dep.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: failed to evaluate package manifest

error: contract broken by the value of `ref`
       expected 40 characters, got 18
     ┌─ <stdlib/std.ncl>:3358:17
     │
3358 │               | [| 'Head, 'Branch String, 'Tag String, 'Commit std.package.GitId |]
     │                 ------------------------------------------------------------------- expected type
     │
     ┌─ [INPUTS_PATH]/package/invalid-git-dep.ncl:10:60
     │
  10 │     git = 'Git { url = "http://example.com", ref = 'Commit "invalid hex string" }
     │                                                            -------------------- evaluated to this expression
     │
     ┌─ <unknown> (generated by evaluation):1:1
     │
   1 │ "invalid hex string"
     │ -------------------- evaluated to this value
     │
     = use the full commit id; short ids are not supported
